[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "cbf_diff_sq"
version = "0.1.0"
authors = [
    {name = "Louis Fernandez", email = "louis.f.fernandez@student.uts.edu.au"}
    ]
description = "An obstacle avoidance framework using differentiable optimisation with superquadric"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "casadi==3.7.0",
    "numpy==1.24.4",
    "pyquaternion==0.9.9",
    "sympy==1.13.3",
    "cvxpy==1.5.2",
]

[project.optional-dependencies]
comparative_studies = [
    "spatialmath-python==1.1.8",
    "PyYAML==6.0.2",
    "tqdm==4.65.0",
    "pandas==2.0.1",
    "roboticstoolbox-python==1.1.0",
    "matplotlib==3.7.1"
]

[project.urls]
Homepage = "tbc"
Documentation = "tbc"
Source = "tbc"
